--- a/shoulder-build/shoulder-starters/shoulder-starter/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-starter/pom.xml
@@ -35,10 +35,10 @@
             </plugin>
 
             <!-- attach source -->
-            <plugin>
+            <!--<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-            </plugin>
+            </plugin>-->
 
             <!-- deploy -->
             <plugin>
