feat(auth-server) 支持授权服务器，jwt/jwk。规避 spring oauth2 的 stackOverflow Bug

--- a/shoulder-dependencies/pom.xml
+++ b/shoulder-dependencies/pom.xml
@@ -361,6 +361,12 @@
                 <version>${springdoc-openapi.version}</version>
             </dependency>-->
 
+            <dependency>
+                <groupId>com.nimbusds</groupId>
+                <artifactId>nimbus-jose-jwt</artifactId>
+                <version>8.20.1</version>
+            </dependency>
+
 
             <!--Commons begin -->
             <dependency>
