feat(beanmap) add beanmap

--- a/shoulder-build/shoulder-starters/shoulder-starter-web/pom.xml
+++ b/shoulder-build/shoulder-starters/shoulder-starter-web/pom.xml
@@ -30,6 +30,10 @@
             <groupId>cn.itlym</groupId>
             <artifactId>shoulder-http</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.itlym</groupId>
+            <artifactId>shoulder-starter-beanmap</artifactId>
+        </dependency>
 
     </dependencies>
 
