--- a/shoulder-dependencies/pom.xml
+++ b/shoulder-dependencies/pom.xml
@@ -63,6 +63,7 @@
         <!-- useful tools -->
         <hutool.version>5.4.3</hutool.version>
         <javassist.version>3.27.0-GA</javassist.version>
+        <javax.ws.rs-api.version>2.1.1</javax.ws.rs-api.version>
 
         <guava.version>29.0-jre</guava.version>
         <findbugs-annotations.version>3.0.0</findbugs-annotations.version>
@@ -80,9 +81,10 @@
 
         <!-- dataBase-->
         <mysql.version>8.0.19</mysql.version>
-        <postgresql.version>42.2.5</postgresql.version>
         <druid.version>1.1.21</druid.version>
         <mybatis-plus.version>3.4.0</mybatis-plus.version>
+        <pagehelper.version>5.2.0</pagehelper.version>
+        <pagehelper-starter.version>1.3.0</pagehelper-starter.version>
         <BeeCP.version>2.5.4.1</BeeCP.version>
         <p6spy.version>3.9.1</p6spy.version>
 
@@ -404,6 +406,12 @@
             </dependency>
 
             <dependency>
+                <groupId>javax.ws.rs</groupId>
+                <artifactId>javax.ws.rs-api</artifactId>
+                <version>${javax.ws.rs-api.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-core</artifactId>
                 <version>${hutool.version}</version>
@@ -498,6 +506,18 @@
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-generator</artifactId>
                 <version>${mybatis-plus.version}</version>
+            </dependency>
+            <!-- mybatis的分页插件 -->
+            <dependency>
+                <groupId>com.github.pagehelper</groupId>
+                <artifactId>pagehelper</artifactId>
+                <version>${pagehelper.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.pagehelper</groupId>
+                <artifactId>pagehelper-spring-boot-starter</artifactId>
+                <version>${pagehelper-starter.version}</version>
             </dependency>
             <!-- db end -->
 
