feat(archetype) 补充 maven archetype 单模块

--- a/shoulder-archetype-simple/src/main/resources/archetype-resources/pom.xml
+++ b/shoulder-archetype-simple/src/main/resources/archetype-resources/pom.xml
@@ -45,6 +45,19 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+                <!-- 是否替换资源中的属性，properties.yml、banner 中需要获取应用版本号、名称、描述 -->
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+
     </build>
+
 
 </project>
