feat(archetype) 补充 maven archetype 单模块

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>shoulder-dependencies</module>
         <module>shoulder-parent</module>
         <module>shoulder-build</module>
+        <module>shoulder-archetype-simple</module>
     </modules>
 
     <properties>
