--- a/shoulder-archetype-simple/pom.xml
+++ b/shoulder-archetype-simple/pom.xml
@@ -10,6 +10,10 @@
 
     <name>shoulder-archetype-simple</name>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <build>
         <extensions>
             <extension>
