--- a/shoulder-dependencies/pom.xml
+++ b/shoulder-dependencies/pom.xml
@@ -54,6 +54,7 @@
         <commons-exec.version>1.3</commons-exec.version>
         <commons-email.version>1.5</commons-email.version>
         <commons-io.version>2.7</commons-io.version>
+        <commons-configuration.version>1.8</commons-configuration.version>
         <commons-lang3.version>3.11</commons-lang3.version>
         <commons-net.version>3.6</commons-net.version>
         <commons-daemon.version>1.2.2</commons-daemon.version>
@@ -385,6 +386,11 @@
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
                 <version>${commons-io.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-configuration</groupId>
+                <artifactId>commons-configuration</artifactId>
+                <version>${commons-configuration.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
