--- a/shoulder-build/shoulder-base/pom.xml
+++ b/shoulder-build/shoulder-base/pom.xml
@@ -31,6 +31,7 @@
         <module>shoulder-security-code</module>
 
         <module>shoulder-cluster</module>
+        <module>shoulder-batch</module>
 
         <!--<module>shoulder-api-doc-swagger2</module>-->
     </modules>
