--- a/shoulder-archetype-simple/pom.xml
+++ b/shoulder-archetype-simple/pom.xml
@@ -2,17 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>cn.itlym</groupId>
+        <artifactId>shoulder-framework</artifactId>
+        <version>0.4</version><!-- shoulder-version -->
+        <!--<relativePath>../pom.xml</relativePath>-->
+    </parent>
 
-    <groupId>cn.itlym</groupId>
     <artifactId>shoulder-archetype-simple</artifactId>
-    <version>0.4-SNAPSHOT</version>
     <packaging>maven-archetype</packaging>
 
     <name>shoulder-archetype-simple</name>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
 
     <build>
         <extensions>
@@ -22,7 +22,6 @@
                 <version>3.2.0</version>
             </extension>
         </extensions>
-
 
         <pluginManagement>
             <plugins>
@@ -45,43 +44,4 @@
 
     <url>https://github.com/ChinaLym/shoulder/shoulder-parent/demo1</url>
 
-    <developers>
-        <developer>
-            <id>ChinaLym</id>
-            <name>cnlym</name>
-            <email>cn_lym@foxmail.com</email>
-            <organization>shoulder.</organization>
-            <roles>
-                <role>CAFE BABE</role>
-            </roles>
-            <timezone>+8</timezone>
-        </developer>
-    </developers>
-
-    <licenses>
-        <license>
-            <name>Apache License, Version 2.0</name>
-            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
-            <comments>A business-friendly OSS license</comments>
-        </license>
-    </licenses>
-
-    <scm>
-        <connection>scm:git@github.com:ChinaLym/shoulder-framework.git/shoulder-parent/demo1</connection>
-        <developerConnection>scm:git@github.com:ChinaLym/shoulder-framework.git/shoulder-parent/demo1
-        </developerConnection>
-        <url>git@github.com:ChinaLym/shoulder-framework.git/shoulder-parent/demo1</url>
-    </scm>
-
-    <distributionManagement>
-        <repository>
-            <id>oss</id>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-        </repository>
-        <snapshotRepository>
-            <id>oss</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
 </project>
