refactor(validate): 参数校验相关错误码迁移，提供校验工具

--- a/shoulder-parent/pom.xml
+++ b/shoulder-parent/pom.xml
@@ -198,7 +198,7 @@
                         <execution>
                             <id>attach-sources</id>
                             <!--<phase>package</phase>-->
-                            <phase>verify</phase>
+                            <phase>deploy</phase>
                             <goals>
                                 <goal>jar</goal>
                                 <goal>jar-no-fork</goal>
@@ -246,7 +246,7 @@
                         <execution>
                             <id>attach-javadocs</id>
                             <!--<phase>package</phase>-->
-                            <phase>verify</phase>
+                            <phase>deploy</phase>
                             <goals>
                                 <goal>jar</goal>
                             </goals>
