--- a/pom.xml
+++ b/pom.xml
@@ -137,7 +137,7 @@
                     <executions>
                         <execution>
                             <id>sign-artifacts</id>
-                            <phase>verify</phase><!-- gpg phase verify deploy -->
+                            <phase>deploy</phase><!-- gpg phase verify deploy -->
                             <goals>
                                 <goal>sign</goal>
                             </goals>
@@ -255,6 +255,19 @@
                     <generateBackupPoms>false</generateBackupPoms>
                 </configuration>
             </plugin>-->
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.1</version>
+                <extensions>true</extensions>
+
+                <configuration>
+                    <serverId>nexus</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <stagingProfileId>xxx</stagingProfileId>
+                    <!--<stagingDescription>preRelease</stagingDescription>-->
+                </configuration>
+            </plugin>
 
         </plugins>
     </build>
