feat(batch): 初步设计批量处理模块

--- a/shoulder-build/shoulder-base/shoulder-batch/src/main/resource/message/en_US/shoulder_batch.properties
+++ b/shoulder-build/shoulder-base/shoulder-batch/src/main/resource/message/en_US/shoulder_batch.properties
@@ -5,9 +5,8 @@ shoulder.batch.import.export.mode.msg=Import template downloaded successfully
 shoulder.batch.import.page.show.success=Successful
 shoulder.batch.import.page.show.failed=Failed
 shoulder.batch.validate.repeat.db=Duplicate data ({0}) in the system
-shoulder.batch.import.header.sensitive.tip=Note: sensitive information is not exported when exporting historical import details
 shoulder.batch.upload.model.error=Incorrect data import template
 shoulder.batch.common.label.linNum=Row No.
 shoulder.batch.validate.repeat.all=Repeated data [{0}] in csv file
-shoulder.batch.import.repeat.digest={0}:{1}
-shoulder.batch.import.repeat.break=,
+shoulder.batch.validate.repeat.digest.format={0}:{1}
+shoulder.batch.validate.repeat.digest.break=,
