--- a/shoulder-build/shoulder-base/shoulder-batch/src/main/resource/message/zh_CN/shoulder_batch.properties
+++ b/shoulder-build/shoulder-base/shoulder-batch/src/main/resource/message/zh_CN/shoulder_batch.properties
@@ -26,8 +26,6 @@ shoulder.batch.validate.unknownError=\u6821\u9A8C\u672A\u77E5\u9519\u8BEF
 shoulder.batch.validate.repeat=\u5BFC\u5165\u6570\u636E\u4E2D\u5DF2\u7ECF\u5B58\u5728\u76F8\u540C\u4FE1\u606F[{0}]
 shoulder.batch.validate.repeat.all=\u5BFC\u5165\u6570\u636E\u4E2D\u5DF2\u7ECF\u5B58\u5728\u76F8\u540C\u4FE1\u606F[{0}]
 shoulder.batch.validate.line.number.exception=\u7B2C{0}\u884C
-shoulder.batch.import.header.sensitive.tip=\u6CE8\u610F\uFF1A\u5BFC\u51FA\u5386\u53F2\u5BFC\u5165\u8BE6\u60C5\u65F6\u5019\u4E0D\u5BFC\u51FA\u654F\u611F\u4FE1\u606F
-
-shoulder.batch.import.repeat.digest={0}:{1}
-shoulder.batch.import.repeat.break=|
+shoulder.batch.validate.repeat.digest.format={0}:{1}
+shoulder.batch.validate.repeat.digest.break=|
 
