--- a/shoulder-build/shoulder-base/shoulder-batch/src/main/resource/message/zh_CN/shoulder_batch.properties
+++ b/shoulder-build/shoulder-base/shoulder-batch/src/main/resource/message/zh_CN/shoulder_batch.properties
@@ -10,7 +10,7 @@ shoulder.batch.validate.linNum=\u884C\u53F7
 shoulder.batch.validate.result=\u6821\u9A8C\u7ED3\u679C
 shoulder.batch.validate.detail=\u6821\u9A8C\u8BE6\u60C5
 shoulder.batch.import.result.unknown=\u672A\u77E5\u7ED3\u679C
-shoulder.batch.import.other.importProcess=\u5BFC\u5165\u64CD\u4F5C\u9891\u7E41\uFF0C\u8BF7\u7A0D\u540E\u518D\u8BD5
+shoulder.batch.import.busy=\u5F53\u524D\u6267\u884C\u4EFB\u52A1\u8F83\u591A\uFF0C\u8BF7\u7A0D\u540E\u518D\u8BD5
 shoulder.batch.import.result.importSkip=\u91CD\u590D\u8DF3\u8FC7
 shoulder.batch.import.result.validateFailed=\u6821\u9A8C\u5931\u8D25
 shoulder.batch.import.result.importSuccess=\u5BFC\u5165\u6210\u529F
