--- a/shoulder-build/shoulder-base/shoulder-batch/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-batch/pom.xml
@@ -51,13 +51,12 @@
             <artifactId>shoulder-operation-log</artifactId>
         </dependency>
 
-
-        <dependency>
+        <!--<dependency>
             <groupId>com.opencsv</groupId>
             <artifactId>opencsv</artifactId>
             <version>4.1</version>
             <optional>true</optional>
-        </dependency>
+        </dependency>-->
 
         <!-- https://github.com/uniVocity/univocity-parsers/releases -->
         <dependency>
@@ -66,6 +65,16 @@
             <version>2.9.0</version>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
