doc: nonNull 注解从 spring 到 javax

--- a/shoulder-build/shoulder-base/shoulder-core/pom.xml
+++ b/shoulder-build/shoulder-base/shoulder-core/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <dependencies>
-        <!-- @NonNull / @Nullable 提示 -->
+        <!-- @Nonnull / @Nullable 提示 -->
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>annotations</artifactId>
